--- a/src/lidar_fov_filter/CMakeLists.txt
+++ b/src/lidar_fov_filter/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(ament_cmake_python REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(sensor_msgs REQUIRED)
 
-# Install Python modules
+# Install Python package
 ament_python_install_package(${PROJECT_NAME})
 
 # Install launch files
@@ -29,12 +29,6 @@ install(DIRECTORY
 install(DIRECTORY
   config
   DESTINATION share/${PROJECT_NAME}/
-)
-
-# Install Python script
-install(PROGRAMS
-  scripts/lidar_fov_filter.py
-  DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
