--- a/src/lidar_fov_filter/config/lidar_fov_filter_params.yaml
+++ b/src/lidar_fov_filter/config/lidar_fov_filter_params.yaml
@@ -1,6 +1,7 @@
 lidar_fov_filter:
   ros__parameters:
-    view_direction: 0.0      # Center of FOV in radians (0 = front)
+    view_direction: 1.0      # Center of FOV in radians (0 = front)
     view_width: 3.14159      # Width of FOV in radians (π = 180°)
     input_topic: "/ouster/points"
     output_topic: "/ouster/points_filtered"
+    use_sensor_data_qos: true  # Use BEST_EFFORT QoS for sensor data
